--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <!--Navigation station-->
   <nav id="mainNav" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-    <a href="index.html" class="navbar-brand">NATCHAT</a>
+    <a href="https://natgrant.github.io/index.html" class="navbar-brand">NATCHAT</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle the navbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -39,7 +39,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Technical</a>
           <div class="dropdown-menu " aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">CSS Concepts</a>
+            <a class="dropdown-item" href="natgrant.github.io/blog/sprint2-technical.html">CSS Concepts</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -110,7 +110,7 @@
         <div class="row justify-content-center">
           <div class="col-10 col-lg-8 info mb-5 mb-md-0">
             <h2>WE'RE IN THIS TOGETHER</h2>
-            <p class="leadText">Let's connect - see below for my Social links and follow me on GitHub! Flick me a message me on Facebook if you want to chat more about Dev Academy and your own projects!</p>
+            <p class="leadText">Let's connect - see below for my Social links and follow me on GitHub! Flick me a message on Facebook if you want to chat more about Dev Academy and your own projects!</p>
           </div>
         </div> 
       </div>
