updating link to blog

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Core</a>
           <div class="dropdown-menu " aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="blog/sprint1-cultural.html">Sprint 1</a>
-            <a class="dropdown-item" href="#">Sprint 2</a>
+            <a class="dropdown-item" href="blog/sprint2-cultural.html">Sprint 2</a>
           </div>
         </li>
       </ul>
