adding core blog 3 link to home

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <div class="dropdown-menu " aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="blog/sprint1-cultural.html">Sprint 1</a>
             <a class="dropdown-item" href="blog/sprint2-cultural.html">Sprint 2</a>
+            <a class="dropdown-item" href="blog/sprint3-cultural.html">Sprint 3</a>
           </div>
         </li>
       </ul>
