--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             <a class="dropdown-item" href="blog/sprint1-cultural.html">Sprint 1</a>
             <a class="dropdown-item" href="blog/sprint2-cultural.html">Sprint 2</a>
             <a class="dropdown-item" href="blog/sprint3-cultural.html">Sprint 3</a>
+            <a class="dropdown-item" href="blog/sprint4-cultural.html">Sprint 4</a>
+            <a class="dropdown-item" href="blog/sprint5-cultural.html">Sprint 5</a>
           </div>
         </li>
       </ul>
