--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <div class="dropdown-menu " aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="natgrant.github.io/blog/sprint2-technical.html">CSS Concepts</a>
             <a class="dropdown-item" href="natgrant.github.io/blog/sprint3-technical.html">JavaScript Basics</a>
+            <a class="dropdown-item" href="natgrant.github.io/blog/sprint4-technical.html">Problem Solving</a>
           </div>
         </li>
         <li class="nav-item dropdown">
